<resources>

    <string name="cipher">EnCipher</string>

    <string name="string_cipher">処理したい文字列</string>
    <string name="encrypt">暗号化</string>
    <string name="decrypt">復号</string>
    <string name="clear">クリア</string>
    <string name="sel_encry">使用する方式を選択</string>
    <string name="morse">モールス符号</string>
    <string name="kaeji">換字式暗号</string>
    <string name="key">鍵</string>
    <string name="hint_kaeji">数を入力</string>
    <string name="hint_str">文字列を入力</string>
    <string name="copy_clip">クリップボードにコピー</string>
    <string name="fillin_ue">上に入れる</string>
    <string name="short_point">・</string>
    <string name="long_point">－</string>
    <string name="space">空白</string>
    <string name="allow_left">←</string>
    <string name="radio_jp">ひ(カ)</string>
    <string name="radio_eng">ENG</string>
    <string name="common">共通</string>
    <string name="noStringAndKey">文字列と鍵を入力してください</string>
    <string name="noString">文字列を入力してください</string>
    <string name="noKey">鍵を入力してください</string>
    <string name="noMorse">モールス符号を入力してください</string>
    <string name="over">10以上の桁数にはできません</string>
    <string name="onlyMorse">モールス符号のみ再生できます</string>


<!--    menu-->
    <string name="list_code">モールス符号表</string>
    <string name="history">変換履歴</string>
    <string name="vibration">vibration</string>
    <string name="flash">flash</string>
    <string name="volume">volume</string>

    <string name="pref">設定</string>
    <string name="pref_alart">入力中のテキストがクリアされますがよろしいですか？</string>
    <string name="pref_morse">モールス信号</string>
    <string name="reboot">アプリを再起動後適用されます</string>
    <string name="pref_twobtn">2ボタン入力</string>
    <string name="sum_twobtn">モールス符号の入力ボタンを変更します</string>
</resources>
