<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_corner_4dp"
                android:backgroundTint="@color/white"
                android:elevation="6dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:paddingTop="5dp">

                            <TextView
                                style="@style/normalText"
                                android:text="@string/encrypt" />

                            <Switch
                                android:id="@+id/sw_mode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:paddingBottom="8dp"
                                android:thumbTint="@color/colorPrimary"
                                android:trackTint="@color/colorResultButton" />

                            <TextView
                                style="@style/normalText"
                                android:text="@string/decrypt" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/et_str"
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginBottom="3dp"
                            android:gravity="top"
                            android:hint="@string/hint_str"
                            android:inputType="textMultiLine"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/cross"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:padding="5dp"
                        android:background="@color/white"
                        android:onClick="clearCross"
                        android:src="@drawable/clear"
                        android:textSize="30sp" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/key_kaeji"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:textColor="#0A0A0A"
                            android:text="@string/key"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/n_kaeji"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorBackground"
                            android:hint="@string/hint_kaeji"
                            android:inputType="number" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_corner_4dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:paddingTop="3dp"
                    android:paddingEnd="5dp">

                    <RadioGroup
                        android:id="@+id/radio_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_jp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/white"
                            android:text="@string/radio_jp"
                            android:textColor="@color/white"/>

                        <RadioButton
                            android:id="@+id/radio_eng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/white"
                            android:textColor="@color/white"
                            android:text="@string/radio_eng" />
                    </RadioGroup>
                </LinearLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <TextView
                        android:id="@+id/tv_crypt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/bt_play"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/ripple_res"
                        android:scaleType="centerInside"
                        android:src="@drawable/play" />

                    <ImageButton
                        android:id="@+id/bt_share"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/ripple_res"
                        android:scaleType="centerInside"
                        android:src="@drawable/share" />

                    <ImageButton
                        android:id="@+id/bt_cpy"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/ripple_res"
                        android:scaleType="centerInside"
                        android:src="@drawable/copy" />

                    <ImageButton
                        android:id="@+id/bt_fil"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/ripple_res"
                        android:padding="6dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/fill" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/putMorse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_put_space"
                        style="@style/etcPutButton"
                        android:text="space"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:id="@+id/bt_two"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/bt_put_short"
                            style="@style/morsePutButton"
                            android:text="@string/short_point" />

                        <Button
                            android:id="@+id/bt_put_long"
                            style="@style/morsePutButton"
                            android:text="@string/long_point" />

                    </LinearLayout>

                    <com.lune.encipher.CustomImageButton
                        android:id="@+id/bt_point"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/round_pointbutton"
                        android:scaleType="centerInside"
                        android:src="@drawable/tontsu" />

                    <Button
                        android:id="@+id/bt_bs"
                        style="@style/etcPutButton"
                        android:text="@string/allow_left"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>